--- a/style/sass/partials/_media-queries.scss
+++ b/style/sass/partials/_media-queries.scss
@@ -1,75 +1,113 @@
-@media(max-width: 725px) {
-    h1 {
-        font-size: 1.8rem;
-    }
+@media (max-width: 725px) {
+	h1 {
+		font-size: 1.8rem;
+	}
 
-    h2 {
-        font-size: 0.8rem;
-    }
+	h2 {
+		font-size: 0.8rem;
+	}
 
-    fieldset {
-        flex-direction: column;
-    }
+	legend {
+		margin: 10px auto 15px;
+	}
 
-    .next {
-        margin: 70px auto 50px;
-    }
+	fieldset {
+		flex-direction: column;
+	}
 
-    .playAgainMsg {
-        font-size: 0.7rem;
-    }
+	.start {
+		margin-top: 100px;
+	}
+
+	.next {
+		margin: 40px auto 50px;
+	}
+
+	.playAgainMsg {
+		font-size: 0.7rem;
+		margin: 10px auto 50px;
+	}
+
+	label {
+		margin: 10px auto;
+	}
+
+	@keyframes pulse {
+		50% {
+			transform: scale(2);
+		}
+	}
 }
 
-@media(max-width: 605px) {
-    h1 {
-        font-size: 1.2rem;
-    }
+@media (max-width: 605px) {
+	h1 {
+		font-size: 1.2rem;
+	}
 
-    h4 {
-        margin: 5px auto;
-    }
+	h4 {
+		margin: 5px auto;
+	}
 
-    legend {
-        margin: 20px auto;
-    }
+	legend {
+		margin: 20px auto;
+	}
 
-    .start {
-        margin-top: 50px;
-    }
-
-    button {
-        font-size: 0.7rem;
-        
-    }
+	button {
+		font-size: 0.7rem;
+	}
 }
 
-@media(max-width: 425px) {
-    html {
-        font-size: 100%;
-    }
-    
-    main {
-        margin: 70px auto;
-        padding: 0;
-        max-width: 90%;
-    }
+@media (max-width: 425px) {
+	html {
+		font-size: 100%;
+	}
 
-    // form {
-    //     margin: 0 calc((100vh / 2) - 80% - 10px);
-    // }
+	main {
+		margin: 50px auto;
+		padding: 0;
+		max-width: 90%;
+	}
 
-    label {
-        font-size: 1rem;
-    }
+	legend {
+		margin: 10px auto;
+	}
 
-    h2 {
-        font-family: 'Play', sans-serif;
-        font-size: 1rem;
-    }
+	form {
+		width: auto;
+	}
 
-    footer {
-        p{
-            font-size: 0.7rem;
-        }
-    }
+	label {
+		font-size: 1rem;
+		padding: 10px;
+
+		&:hover,
+		&:focus {
+			font-weight: normal;
+		}
+	}
+
+	h2 {
+		font-family: "Play", sans-serif;
+		font-size: 1.2rem;
+	}
+
+	h3 {
+		max-width: 90%;
+	}
+
+	h4 {
+		font-size: 1rem;
+	}
+
+	@keyframes pulse {
+		50% {
+			transform: scale(1.3);
+		}
+	}
+
+	footer {
+		p {
+			font-size: 0.7rem;
+		}
+	}
 }
