--- a/style/style.css
+++ b/style/style.css
@@ -305,6 +305,9 @@ h3 {
 
 h4 {
   font-size: 1.2rem;
+  max-width: 80%;
+  margin: 0 auto;
+  overflow-x: hidden;
 }
 
 button {
@@ -345,7 +348,7 @@ button {
 }
 
 .playAgainMsg {
-  margin-bottom: 100px;
+  margin: 10px auto 100px;
 }
 
 .scorep {
@@ -389,9 +392,7 @@ fieldset {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   margin: 0 auto;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
+  width: auto;
   max-width: 100%;
 }
 
@@ -403,8 +404,9 @@ label {
   border: 3px solid black;
   border-radius: 18px;
   background-color: #f7df1e;
-  margin: 20px;
+  margin: 20px auto;
   max-width: 100%;
+  word-break: break-word;
 }
 label:hover, label:focus {
   -webkit-box-shadow: 0px 0px 20px 1px black;
@@ -422,15 +424,13 @@ label:active {
 }
 
 input[type=radio] {
-  position: relative;
-  left: 200px;
   opacity: 0;
 }
 
 footer {
   background-color: black;
   padding: 2px 0;
-  width: 100%;
+  max-width: 100%;
   margin-top: 50px;
 }
 footer p {
@@ -443,12 +443,12 @@ footer a {
   color: #f7df1e;
 }
 
-.correct {
-  -webkit-animation: correct 1s ease 0s 1 normal forwards;
-          animation: correct 1s ease 0s 1 normal forwards;
+.h4-animation {
+  -webkit-animation: pulse 1s ease 0s 1 normal forwards;
+          animation: pulse 1s ease 0s 1 normal forwards;
 }
 
-@-webkit-keyframes correct {
+@-webkit-keyframes pulse {
   0% {
     -webkit-transform: scale(1);
             transform: scale(1);
@@ -463,7 +463,7 @@ footer a {
   }
 }
 
-@keyframes correct {
+@keyframes pulse {
   0% {
     -webkit-transform: scale(1);
             transform: scale(1);
@@ -486,6 +486,10 @@ footer a {
     font-size: 0.8rem;
   }
 
+  legend {
+    margin: 10px auto 15px;
+  }
+
   fieldset {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -493,12 +497,35 @@ footer a {
             flex-direction: column;
   }
 
+  .start {
+    margin-top: 100px;
+  }
+
   .next {
-    margin: 70px auto 50px;
+    margin: 40px auto 50px;
   }
 
   .playAgainMsg {
     font-size: 0.7rem;
+    margin: 10px auto 50px;
+  }
+
+  label {
+    margin: 10px auto;
+  }
+
+  @-webkit-keyframes pulse {
+    50% {
+      -webkit-transform: scale(2);
+              transform: scale(2);
+    }
+  }
+
+  @keyframes pulse {
+    50% {
+      -webkit-transform: scale(2);
+              transform: scale(2);
+    }
   }
 }
 @media (max-width: 605px) {
@@ -514,10 +541,6 @@ footer a {
     margin: 20px auto;
   }
 
-  .start {
-    margin-top: 50px;
-  }
-
   button {
     font-size: 0.7rem;
   }
@@ -528,20 +551,53 @@ footer a {
   }
 
   main {
-    margin: 70px auto;
+    margin: 50px auto;
     padding: 0;
     max-width: 90%;
   }
 
+  legend {
+    margin: 10px auto;
+  }
+
+  form {
+    width: auto;
+  }
+
   label {
     font-size: 1rem;
+    padding: 10px;
+  }
+  label:hover, label:focus {
+    font-weight: normal;
   }
 
   h2 {
     font-family: "Play", sans-serif;
+    font-size: 1.2rem;
+  }
+
+  h3 {
+    max-width: 90%;
+  }
+
+  h4 {
     font-size: 1rem;
   }
 
+  @-webkit-keyframes pulse {
+    50% {
+      -webkit-transform: scale(1.3);
+              transform: scale(1.3);
+    }
+  }
+
+  @keyframes pulse {
+    50% {
+      -webkit-transform: scale(1.3);
+              transform: scale(1.3);
+    }
+  }
   footer p {
     font-size: 0.7rem;
   }
